[package]
name = "showorder"
version = "0.2.0"
description = "A utility to help order video files from TV shows using subtitles."
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2021"
exclude = [
    "data/*",
]

[dependencies]
#webm-iterable = "0.2.0"
webm-iterable = { git = "https://github.com/robmikh/webm-iterable", branch = "dev" }
#webm-iterable = { path = "../webm-iterable" }
byteorder = "1.4.3"
nalgebra = "0.30.1"
regex = "1.5.5"
rayon = "1.5.1"
levenshtein = "1.0.5"
clap = { version = "3.1.6", features = ["derive"] }

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Foundation",
    "UI",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Media_Ocr",
    "Globalization",
    "Win32_System_WinRT",
]
